Initial personController createNewPersonTest